src/objects/ffr__XXXCreditNote__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNoteCurrency__c</fullName>
        <label>Credit Note Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNoteDate__c</fullName>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNoteDescription__c</fullName>
        <label>Credit Note Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNoteDueDate__c</fullName>
        <label>Credit Note Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNoteTotal__c</fullName>
        <label>Credit Note Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>ffr__XXXPeriod__c</referenceTo>
        <relationshipLabel>XXX Credit Note Periods</relationshipLabel>
        <relationshipName>CreditNotePeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>ffr__XXXTransaction__c</referenceTo>
        <relationshipLabel>XXX Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__gla__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>ffr__XXXGLA__c</referenceTo>
        <relationshipLabel>XXX Credit Note GLAs</relationshipLabel>
        <relationshipName>CreditNoteGLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>XXX Credit Note</label>
    <nameField>
        <displayFormat>XCRN{000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>